simplification of modification

--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -533,7 +533,7 @@
                                                             <td><strong>Critical Challenge</strong> for architects</td>
                                                             <td>Building <a href="https://hal.science/tel-04413469v2"
                                                                     target="_blank"><em>Continuous Operational
-                                                                        Interoperability</em></a>  for
+                                                                        Interoperability</em></a> for
                                                                 secured digital collaborations</td>
                                                         </tr>
                                                         <tr>
@@ -1168,7 +1168,7 @@
                                                     <li>.4 Blockchain Digital
                                                         Business Ecossytem landscape</li>
                                                 </ol>
-                                                <li>Conclusion</li>
+                                                <li>Conclusion related to the prototyping</li>
 
                                             </ol>
                                         </li>
@@ -1182,12 +1182,7 @@
                                             <p style="font-size: 0.5em; text-align: left;">Aggregator for siloed
                                                 enterprise data distributed in heterogenesous enterprise
                                                 repositories:<br>
-                                                <span style="font-size: 0.7em; text-align: left">
-                                                    Business Management System, Product Lifecycle Management Systems,
-                                                    Model
-                                                    Based System Engineering model repositories, Configuration
-                                                    Management DataBase (CMDB), Application repositories...
-                                                </span>
+
                                             </p>
                                             <table style="width: 100%; font-size: 0.9em;">
                                                 <thead style="font-size: 0.4em;text-align: left;">
@@ -1234,7 +1229,14 @@
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
                                             <img src="./img/consolidationheterogeneousrepositories.png"
                                                 alt="Consolidation de données d'entreprise"
-                                                style="max-width: 80%; height: auto;" />
+                                                style="max-width: 50%; height: auto;" />
+                                            <div style="font-size: 0.35em; text-align: left">
+                                                <strong>BMS</strong>: Business Management System,
+                                                <strong>PLM</strong>:Product Lifecycle Management Systems,
+                                                <strong>MBSE</strong> Based System Engineering model repositories,
+                                                <strong>CMDB:</strong> Configuration
+                                                Management DataBase
+                                            </div>
 
                                         </div>
                                     </div>
@@ -1435,30 +1437,58 @@
                                 </section>
                                 <section>
                                     <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">4.4 Conclusion
+                                        related to the prototyping
                                     </h3>
                                     <div class="content-zone">
                                         <div class="text-zone">
 
-                                            <p style="font-size: 0.45em;text-align: left;">The various addressed use
-                                                cases and imported formats demonstrate that semantization of compound
-                                                interactive dynamic graph can be applied and valuable for many kind of
-                                                technologies.</p>
+                                            <table>
+                                                <thead style="font-size: 0.45em; text-transform: none;color: #3366cc;">
+                                                    <tr>
+                                                        <th>Aspect</th>
+                                                        <th>Description</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody style="font-size: 0.45em; text-transform: none;color: #3366cc;">
+                                                    <tr>
+                                                        <td><strong>Applicability</strong></td>
+                                                        <td>Useful across many technologies and domain language via
+                                                            semantization of dynamic
+                                                            compound interactive graphs.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Platform Role</strong></td>
+                                                        <td>Experimental environment for architecture exploration and
+                                                            interoperability studies</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Target Domains</strong></td>
+                                                        <td>Semantic, structural, organizational, and process
+                                                            interoperability.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Extended Hypermodels</strong></td>
+                                                        <td>Supports multiple views of the same concept for different
+                                                            purposes.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Limitations</strong></td>
+                                                        <td>Some constraints as a research platform.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Opportunities</strong></td>
+                                                        <td>Open to extensions and innovative usage patterns.</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                            <blockquote>
+                                                <p style="font-size: 0.6em; text-align: center;">
+                                                    <em> Let's explore limitations and opportunities
+                                                    </em>
+                                                </p>
+                                            </blockquote>
+                                        </div>
 
-                                            <p style="font-size: 0.45em;text-align: left;">ArchiCG can be consider as an
-                                                easy to use experimental platform for any kind of architecture
-                                                exploration or interoperability study dealing with semantic, structural,
-                                                organisational or process interoperability, in particular due to
-                                                semantization of dynamic compound iterative graphs. It is also a perfect
-                                                environment to study multiple representations of a same thing serving
-                                                different purpose (extended hypermodels)</p>
-                                            <p style="font-size: 0.45em;text-align: left;">However some limitations
-                                                exist but also many opportunity for innovative
-                                                extension and usage.</p>
-                                        </div>
-                                        <div class="image-zone" style="margin-bottom: 0.2em;">
-                                            <img src="./img/ArchiCG and Semantic Cartography.webp"
-                                                alt="Semantized Cartography" style="max-width: 80%; height: auto;" />
-                                        </div>
                                     </div>
 
 
@@ -1490,23 +1520,43 @@
                                     </h3>
                                     <div class="content-zone">
                                         <div class="text-zone">
-
-                                            <p style="font-size: 0.45em;text-align: left;">Component paradigm, as
-                                                implemented by UML2 and SysML, considers the concept of "ports", which
-                                                is should be visually capture as being on a boundary<br>While
-                                                implemented by various
-                                                visual modeling tool, or even by some diagram generators with automated
-                                                layout like PlantUML, implementation for interactive dynamic graph with
-                                                autolayouting seems not currently covered and to request some research
-                                                on the visualization field.</p>
-
-                                            <p style="font-size: 0.45em;text-align: left;">As relying on graph (theory)
-                                                library, it is not possible to cover relations relying an entity and
-                                                another relations, as it is the case for ArchiMate or UML. It is a
-                                                structural limitation making it impossible to import such construct and
-                                                to visualize it. A solution should be usage of n-ary relationships which
-                                                could be imported and provide quite a best expressivity than the
-                                                previously mentionned construct.</p>
+                                            <table>
+                                                <thead style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+                                                    <tr>
+                                                        <th>Aspect</th>
+                                                        <th>Description</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+                                                    <tr>
+                                                        <td><strong>Component Paradigm</strong></td>
+                                                        <td>UML2 and SysML define "ports" as interface points on the
+                                                            boundary of components, emphasizing encapsulation.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Visual Representation</strong></td>
+                                                        <td>Ports are usually supported in visual modeling tools and in
+                                                            some auto-layout generators like PlantUML.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Interactive Graph Limitation</strong></td>
+                                                        <td>Dynamic interactive graphs with auto-layout do not yet
+                                                            support port-level boundary visualization; research is
+                                                            needed.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Structural Limitation</strong></td>
+                                                        <td>Graph libraries typically cannot model a relation involving
+                                                            another relation (e.g., in UML or ArchiMate).</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Workaround</strong></td>
+                                                        <td>Introducing <strong>n-ary relationships</strong> could allow
+                                                            richer expressiveness and compatibility with such
+                                                            constructs.</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
 
                                         </div>
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
@@ -1524,18 +1574,39 @@
                                     <div class="content-zone">
                                         <div class="text-zone">
 
-                                            <p style="font-size: 0.45em;text-align: left;">Issue with ArchiMate and UML
-                                                when having to exchange relations linking other relation with nodes or
-                                                relation. It means that these constructs can't be formalized, so
-                                                imported as Compound graphs. Idem with UML and SysML ports.<br><br>
-                                                This is illustrated by the figure with conveyed objects captured with
-                                                relations pointig a flow relations: not possible to manipulate it with
-                                                cytoscape.js</p>
-
-                                            <p style="font-size: 0.45em;text-align: left;">It is recommended to avoid to
-                                                use such a structure when possible when using those languages and
-                                                willing to be able to exchange with other kind of tools.</p>
-
+                                            <section>
+ 
+  <table>
+    <thead style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+      <tr>
+        <th>Aspect</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+      <tr>
+        <td><strong>Unsupported Constructs</strong></td>
+        <td>ArchiMate and UML allow relations to link other relations and nodes, which cannot be properly represented in standard graph models.</td>
+      </tr>
+      <tr>
+        <td><strong>Formalization Barrier</strong></td>
+        <td>Such structures cannot be formalized using graph theory libraries like Cytoscape.js, and thus can't be directly imported.</td>
+      </tr>
+      <tr>
+        <td><strong>Example</strong></td>
+        <td>Cases like conveyed objects represented by a flow pointing to a relation illustrate this limitation—visualization and manipulation are not feasible.</td>
+      </tr>
+      <tr>
+        <td><strong>Port Modeling Limitation</strong></td>
+        <td>Similar limitations apply to port constructs in UML and SysML when requiring precise boundary semantics and inter-relation handling.</td>
+      </tr>
+      <tr>
+        <td><strong>Recommendation</strong></td>
+        <td>Avoid using such complex constructs when aiming for interoperability or exchange with tools based on graph theory.</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
                                         </div>
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
                                             <img src="./img/ISA95 ArchiMate ConveyedObject.webp" alt="Illustration"
@@ -1602,8 +1673,9 @@
                                                     <li>Development and Improvement of modules/features
                                                     </li>
                                                     <p>Contacts<br> <span style="font-size: 0.8em;"><a
-                                                            href="nicolas.figay@gmail.com">nicolas.figay@gmail.com</a><br>
-                                                            <a href="parisa.ghodous@univ-lyon1.fr">parisa.ghodous@univ-lyon1.fr</a></span>
+                                                                href="nicolas.figay@gmail.com">nicolas.figay@gmail.com</a><br>
+                                                            <a
+                                                                href="parisa.ghodous@univ-lyon1.fr">parisa.ghodous@univ-lyon1.fr</a></span>
                                                     </p>
                                                     <p>Github: <a href="https://github.com/nfigay/ArchiCG/">here</a></p>
                                                     <p>LinkedIn Community: <a
@@ -1630,7 +1702,8 @@
                             <section>
                                 <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">References</h3>
                                 <ul style="font-size: 0.5em;">
-                                    <li>Figay Nicolas (2021) <a href="">Continuous Operational Interoperability.</a> Computer Science [cs].
+                                    <li>Figay Nicolas (2021) <a href="">Continuous Operational Interoperability.</a>
+                                        Computer Science [cs].
                                         Université Claude Bernard Lyon 1; LIRIS UMR 5205 CNRS/INSA de Lyon/Université
                                         Claude Bernard Lyon 1/Université Lumière Lyon 2/École Centrale de Lyon.
                                         ⟨tel-04413469v2⟩</li>
