--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -1575,38 +1575,51 @@
                                         <div class="text-zone">
 
                                             <section>
- 
-  <table>
-    <thead style="font-size: 0.4em; text-transform: none;color: #3366cc;">
-      <tr>
-        <th>Aspect</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-    <tbody style="font-size: 0.4em; text-transform: none;color: #3366cc;">
-      <tr>
-        <td><strong>Unsupported Constructs</strong></td>
-        <td>ArchiMate and UML allow relations to link other relations and nodes, which cannot be properly represented in standard graph models.</td>
-      </tr>
-      <tr>
-        <td><strong>Formalization Barrier</strong></td>
-        <td>Such structures cannot be formalized using graph theory libraries like Cytoscape.js, and thus can't be directly imported.</td>
-      </tr>
-      <tr>
-        <td><strong>Example</strong></td>
-        <td>Cases like conveyed objects represented by a flow pointing to a relation illustrate this limitation—visualization and manipulation are not feasible.</td>
-      </tr>
-      <tr>
-        <td><strong>Port Modeling Limitation</strong></td>
-        <td>Similar limitations apply to port constructs in UML and SysML when requiring precise boundary semantics and inter-relation handling.</td>
-      </tr>
-      <tr>
-        <td><strong>Recommendation</strong></td>
-        <td>Avoid using such complex constructs when aiming for interoperability or exchange with tools based on graph theory.</td>
-      </tr>
-    </tbody>
-  </table>
-</section>
+
+                                                <table>
+                                                    <thead
+                                                        style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+                                                        <tr>
+                                                            <th>Aspect</th>
+                                                            <th>Description</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody
+                                                        style="font-size: 0.4em; text-transform: none;color: #3366cc;">
+                                                        <tr>
+                                                            <td><strong>Unsupported Constructs</strong></td>
+                                                            <td>ArchiMate and UML allow relations to link other
+                                                                relations and nodes, which cannot be properly
+                                                                represented in standard graph models.</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><strong>Formalization Barrier</strong></td>
+                                                            <td>Such structures cannot be formalized using graph theory
+                                                                libraries like Cytoscape.js, and thus can't be directly
+                                                                imported.</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><strong>Example</strong></td>
+                                                            <td>Cases like conveyed objects represented by a flow
+                                                                pointing to a relation illustrate this
+                                                                limitation—visualization and manipulation are not
+                                                                feasible.</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><strong>Port Modeling Limitation</strong></td>
+                                                            <td>Similar limitations apply to port constructs in UML and
+                                                                SysML when requiring precise boundary semantics and
+                                                                inter-relation handling.</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><strong>Recommendation</strong></td>
+                                                            <td>Avoid using such complex constructs when aiming for
+                                                                interoperability or exchange with tools based on graph
+                                                                theory.</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </section>
                                         </div>
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
                                             <img src="./img/ISA95 ArchiMate ConveyedObject.webp" alt="Illustration"
@@ -1747,29 +1760,7 @@
                                 </ul>
                             </section>
 
-                            <!-- Section for Graph 2 with a content-zone that includes the image zone -->
 
-
-                            <section>
-                                <h2>Let's Test Your Understanding!</h2>
-                                <p>Answer this quick quiz before we continue.</p>
-                            </section>
-
-                            <section>
-                                <h3>Section Quiz</h3>
-                                <iframe src=" https://forms.gle/RKAU12JZsof1LpwAA?embedded=true" width="640"
-                                    height="800" frameborder="0" marginheight="0" marginwidth="0">
-                                    Loading…
-                                </iframe>
-                            </section>
-
-                            <section>
-                                <h3>Live Results</h3>
-                                <iframe src="https://docs.google.com/forms/d/e/your-form-id/viewanalytics?embedded=true"
-                                    width="640" height="800" frameborder="0">
-                                    Loading…
-                                </iframe>
-                            </section>
                             </section>
                         </div>
                     </div>
