--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -464,7 +464,7 @@
                                             Interoperability
                                         </li>
                                         <li>
-                                            Semantic Graphs limits and State of the Art
+                                            Semantic Graphs State of the Art and limits
                                         </li>
                                         <li>
                                             Proposed Approach: Semantizing Interactive Compound Graphs
@@ -690,7 +690,7 @@
                                     <ol style="list-style-type:none; ">
                                         <li
                                             style="counter-reset: main 1;font-size: 0.8em;text-transform: none;color: #3366cc;">
-                                            <strong>Semantic Graphs limits and State of the Art</strong>
+                                            <strong>Semantic Graphs State of the Art and limits</strong>
                                             <p style="text-align: left;">
                                                 A visual approach to structuring, navigating, and reasoning over
                                                 complexity<br>
@@ -879,7 +879,7 @@
                                                             parent-child grouping</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Collapse/Expand Plugin</td>
+                                                        <td>Collapse/Expand Plugin (Dogrusoz 2018)</td>
                                                         <td>Interactively hide/show nested nodes and edges for
                                                             clarity</td>
                                                     </tr>
@@ -983,9 +983,9 @@
                                                             link nodes via source and target object properties</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Cytoscape Graphs</td>
+                                                        <td>Cytoscape Graphs (Franz M)</td>
                                                         <td>Support for parent object property on nodes (compound
-                                                            structure)</td>
+                                                            structure) </td>
                                                     </tr>
                                                     <tr>
                                                         <th colspan="2">Our Contribution to the State of the Art</th>
@@ -1454,12 +1454,14 @@
                                                         <td><strong>Applicability</strong></td>
                                                         <td>Useful across many technologies and domain language via
                                                             semantization of dynamic
-                                                            compound interactive graphs.</td>
+                                                            compound interactive graphs. </td>
                                                     </tr>
                                                     <tr>
                                                         <td><strong>Platform Role</strong></td>
                                                         <td>Experimental environment for architecture exploration and
-                                                            interoperability studies</td>
+                                                            interoperability studies<br>Just as in
+                                                            geographic systems, we can can use a base map of a system to spatially organize
+                                                            and contextualize information coming from various stakeholders and domains</td>
                                                     </tr>
                                                     <tr>
                                                         <td><strong>Target Domains</strong></td>
@@ -1714,7 +1716,7 @@
                             </section>
                             <section>
                                 <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">References</h3>
-                                <ul style="font-size: 0.5em;">
+                                <ul style="font-size: 0.4em;">
                                     <li>Figay Nicolas (2021) <a href="">Continuous Operational Interoperability.</a>
                                         Computer Science [cs].
                                         Université Claude Bernard Lyon 1; LIRIS UMR 5205 CNRS/INSA de Lyon/Université
@@ -1729,34 +1731,30 @@
                                             href="https://doi.org/10.1109/TSE.2009.67" target="_blank">DOI</a>
                                     </li>
                                     <li>
-                                        Petre, M. (1995). <em>Why looking isn’t always seeing: Readership
-                                            skills and
-                                            graphical programming</em>. Communications of the ACM, 38(6),
-                                        33–44.
-                                    </li>
-                                    <li>
                                         Bertin, J. (1983). <em>Semiology of Graphics: Diagrams, Networks,
                                             Maps</em>.
                                         University of Wisconsin Press. (Originally published in French,
                                         1967)
                                     </li>
+
+                                    <li>Cytoscape.js: a graph theory library for visualisation and analysis
+
+                                        Franz M, Lopes CT, Huck G, Dong Y, Sumer O, Bader GD</li>
                                     <li>
-                                        Störrle, H. (2010). <em>On the impact of layout quality to
-                                            understanding UML
-                                            diagrams</em>. In Proceedings of the 3rd ACM SIGSOFT Int.
-                                        Workshop on
-                                        Visualizing Software for Understanding and Analysis (VISSOFT).
+                                        U. Dogrusoz , A. Karacelik, I. Safarli, H. Balci, L. Dervishi, and M.C. Siper,
+                                        "Efficient methods and readily customizable libraries for managing complexity of
+                                        large networks", PLoS ONE, 13(5): e0197238, 2018.
                                     </li>
-                                    <li>
-                                        Selic, B. (2003). <em>The Pragmatics of Model-Driven
-                                            Development</em>. IEEE
-                                        Software, 20(5), 19–25.
-                                    </li>
-                                    <li>
-                                        Atkinson, C., & Kühne, T. (2003). <em>Modeling languages as
-                                            metamodels</em>.
-                                        In Proceedings of the UML 2003 conference, LNCS 2863, 17–31.
-                                    </li>
+                                    <li>The Open Group. (2022). ArchiMate® 3.2 Specification (Doc No. C22C). The Open
+                                        Group. https://pubs.opengroup.org/architecture/archimate32-doc/</li>
+                                    <li>W3C OWL Working Group. (2012). OWL 2 Web Ontology Language Document Overview
+                                        (Second Edition). World Wide Web Consortium (W3C).
+                                        https://www.w3.org/TR/owl2-overview/</li>
+                                    <li>International Organization for Standardization. (1994–). ISO 10303 – Industrial
+                                        automation systems and integration — Product data representation and exchange
+                                        (STEP). Geneva, Switzerland: ISO. https://www.iso.org/standard/63141.html</li>
+
+
                                 </ul>
                             </section>
 
